force-app/main/default/objects/Agent_API_Config__c/Agent_API_Config__c.object-meta.xml
<CustomObject>
    <description>Agent API Configuration Parameters</description>
    <label>Agent API Config</label>
    <nameField>
        <label>Agent API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent API Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>