force-app/main/default/objects/Agent_API_Config__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <label>Agent Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>