force-app/main/default/objects/Agent_API_Config__c/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <label>API Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIAW API</fullName>
            </value>
            <value>
                <fullName>Agent API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>