force-app/main/default/objects/Agent_API_Config__c/fields/ConsumerKey__c.field-meta.xml
<CustomField>
    <fullName>ConsumerKey__c</fullName>
    <label>Consumer Key</label>
    <length>254</length>
    <type>Text</type>
</CustomField>