force-app/main/default/objects/Agent_API_Config__c/fields/ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>ConsumerSecret__c</fullName>
    <label>Consumer Secret</label>
    <length>254</length>
    <type>Text</type>
</CustomField>