force-app/main/default/objects/Agent_API_Config__c/fields/Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Entry_Id__c</fullName>
    <label>Entry Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>