force-app/main/default/objects/Agent_API_Config__c/fields/lastRequest__c.field-meta.xml
<CustomField>
    <fullName>lastRequest__c</fullName>
    <label>lastRequest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>