force-app/main/default/objects/Agent_API_Config__c/fields/lastResponse__c.field-meta.xml
<CustomField>
    <fullName>lastResponse__c</fullName>
    <label>lastResponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>