force-app/main/default/objects/Agent_API_Config__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <label>Org Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>