force-app/main/default/objects/Agent_API_Config__c/fields/Org_Url__c.field-meta.xml
<CustomField>
    <fullName>Org_Url__c</fullName>
    <label>Org Url</label>
    <length>254</length>
    <type>Text</type>
</CustomField>